test-data/invalid/pluraltranslate-invalid-child-element.jsx
const Test = () => (
    <PluralTranslate>
        <Param />
    </PluralTranslate>
);
